[gd_scene load_steps=4 format=3 uid="uid://mr5ewegmm3pb"]

[ext_resource type="PackedScene" uid="uid://c47y8d4xspkgo" path="res://Scenes/GUI_elements/SaveSlot.tscn" id="1_sxlnt"]
[ext_resource type="Script" path="res://scripts/save_file_menu.gd" id="1_wfu4v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_navvj"]

[node name="SaveFileMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wfu4v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveSlot1" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_sxlnt")]
layout_mode = 2

[node name="SaveSlot2" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_sxlnt")]
layout_mode = 2

[node name="SaveSlot3" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_sxlnt")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="New" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "New"

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_navvj")

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Back
"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Back" to="." method="_on_back_pressed"]
